# Kaiman-Pub

./: Cargo.toml
src/: errors.rs  main.rs
src/components/: handle_input.rs  handle_library.rs  handle_scraping.rs  mod.rs  utils.rs  write_user_path.rs
src/components/mangadex/: handle_mangadex.rs  json_structs.rs  mod.rs
src/components/mangapill/: handle_mangapill.rs  mod.rs
src/components/weebcentral/: handle_weebcentral.rs  mod.rs
src/utils/: api_helper.rs  chapter_dir_helpers.rs  image_helpers.rs  misc.rs  mod.rs
