[package]
name = "Kaiman"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features  = ["blocking", "json", "cookies"] }
scraper = "0.18"
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
url = "2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"